# cis-bidsutils

./: .zenodo.json  README.md  setup.cfg  setup.py
.circleci/: config.yml
bidsutils/: __about__.py  __init__.py  _version.py  anonymization.py  dataset.py  info.py  metadata.py  mriqc.py
docs/: Makefile  about.rst  api.rst  conf.py  contents.rst  index.rst  links.rst
