[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = bidsutils/_version.py
versionfile_build = bidsutils/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude=*build/,tests
putty-ignore =
    */__init__.py : +F401
ignore = E126,E402
